apps/rclone/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rclone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rclone
    spec:
      containers:
        - name: rclone-webdav
          image: rclone
          args:
            - serve
            - webdav
            - /data
          ports:
            - containerPort: 8080
              name: webdav
          readinessProbe:
            tcpSocket:
              port: webdav
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: webdav
            initialDelaySeconds: 15
            periodSeconds: 20
          startupProbe:
            tcpSocket:
              port: webdav
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config/rclone/rclone.conf
              subPath: rclone.conf
              readOnly: true
            - name: config-webdav
              mountPath: /config/rclone/htpasswd
              subPath: htpasswd
              readOnly: true
            - name: cache
              mountPath: /cache
        - name: rclone-ftp
          image: rclone
          args:
            - serve
            - ftp
            - /data
          ports:
            - containerPort: 2121
              name: ftp-control
            - containerPort: 30000
              name: ftp-data-30000
            - containerPort: 30001
              name: ftp-data-30001
            - containerPort: 30002
              name: ftp-data-30002
            - containerPort: 30003
              name: ftp-data-30003
            - containerPort: 30004
              name: ftp-data-30004
            - containerPort: 30005
              name: ftp-data-30005
            - containerPort: 30006
              name: ftp-data-30006
            - containerPort: 30007
              name: ftp-data-30007
            - containerPort: 30008
              name: ftp-data-30008
            - containerPort: 30009
              name: ftp-data-30009
            - containerPort: 30010
              name: ftp-data-30010
            - containerPort: 30011
              name: ftp-data-30011
            - containerPort: 30012
              name: ftp-data-30012
            - containerPort: 30013
              name: ftp-data-30013
            - containerPort: 30014
              name: ftp-data-30014
            - containerPort: 30015
              name: ftp-data-30015
            - containerPort: 30016
              name: ftp-data-30016
            - containerPort: 30017
              name: ftp-data-30017
            - containerPort: 30018
              name: ftp-data-30018
            - containerPort: 30019
              name: ftp-data-30019
            - containerPort: 30020
              name: ftp-data-30020
            - containerPort: 30021
              name: ftp-data-30021
            - containerPort: 30022
              name: ftp-data-30022
            - containerPort: 30023
              name: ftp-data-30023
            - containerPort: 30024
              name: ftp-data-30024
            - containerPort: 30025
              name: ftp-data-30025
            - containerPort: 30026
              name: ftp-data-30026
            - containerPort: 30027
              name: ftp-data-30027
            - containerPort: 30028
              name: ftp-data-30028
            - containerPort: 30029
              name: ftp-data-30029
          readinessProbe:
            tcpSocket:
              port: ftp-control
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: ftp-control
            initialDelaySeconds: 15
            periodSeconds: 20
          startupProbe:
            tcpSocket:
              port: ftp-control
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config/rclone/rclone.conf
              subPath: rclone.conf
              readOnly: true
            - name: cache
              mountPath: /cache
      volumes:
        - name: config
          configMap:
            name: rclone
        - name: config-webdav
          secret:
            secretName: rclone-webdav
        - name: cache
          emptyDir: {}
