apps/rclone/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rclone
  namespace: shikanime
spec:
  loadBalancerClass: tailscale
  ports:
    - name: ftp-control
      port: 21
      targetPort: ftp-control
    - name: ftp-data-30000
      port: 30000
      targetPort: ftp-data-30000
    - name: ftp-data-30001
      port: 30001
      targetPort: ftp-data-30001
    - name: ftp-data-30002
      port: 30002
      targetPort: ftp-data-30002
    - name: ftp-data-30003
      port: 30003
      targetPort: ftp-data-30003
    - name: ftp-data-30004
      port: 30004
      targetPort: ftp-data-30004
    - name: ftp-data-30005
      port: 30005
      targetPort: ftp-data-30005
    - name: ftp-data-30006
      port: 30006
      targetPort: ftp-data-30006
    - name: ftp-data-30007
      port: 30007
      targetPort: ftp-data-30007
    - name: ftp-data-30008
      port: 30008
      targetPort: ftp-data-30008
    - name: ftp-data-30009
      port: 30009
      targetPort: ftp-data-30009
    - name: ftp-data-30010
      port: 30010
      targetPort: ftp-data-30010
    - name: ftp-data-30011
      port: 30011
      targetPort: ftp-data-30011
    - name: ftp-data-30012
      port: 30012
      targetPort: ftp-data-30012
    - name: ftp-data-30013
      port: 30013
      targetPort: ftp-data-30013
    - name: ftp-data-30014
      port: 30014
      targetPort: ftp-data-30014
    - name: ftp-data-30015
      port: 30015
      targetPort: ftp-data-30015
    - name: ftp-data-30016
      port: 30016
      targetPort: ftp-data-30016
    - name: ftp-data-30017
      port: 30017
      targetPort: ftp-data-30017
    - name: ftp-data-30018
      port: 30018
      targetPort: ftp-data-30018
    - name: ftp-data-30019
      port: 30019
      targetPort: ftp-data-30019
    - name: ftp-data-30020
      port: 30020
      targetPort: ftp-data-30020
    - name: ftp-data-30021
      port: 30021
      targetPort: ftp-data-30021
    - name: ftp-data-30022
      port: 30022
      targetPort: ftp-data-30022
    - name: ftp-data-30023
      port: 30023
      targetPort: ftp-data-30023
    - name: ftp-data-30024
      port: 30024
      targetPort: ftp-data-30024
    - name: ftp-data-30025
      port: 30025
      targetPort: ftp-data-30025
    - name: ftp-data-30026
      port: 30026
      targetPort: ftp-data-30026
    - name: ftp-data-30027
      port: 30027
      targetPort: ftp-data-30027
    - name: ftp-data-30028
      port: 30028
      targetPort: ftp-data-30028
    - name: ftp-data-30029
      port: 30029
      targetPort: ftp-data-30029
    - name: webdav
      port: 8080
      targetPort: webdav
  selector:
    app.kubernetes.io/name: rclone
  type: LoadBalancer
