apps/rclone/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: webdav
      port:
        name: http
  tls:
    - hosts:
        - webdav
